--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | IP Address Tracker</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  IP Address Tracker
-
-  Search for any IP address or domain
-
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <title>Frontend Mentor | IP Address Tracker</title>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <p class="heading-text">IP Address Tracker</p>
+      <form action="">
+        <input type="search" name="search" id="search-bar" />
+        <button type="button">
+          <img src="./images/icon-arrow.svg" alt="" />
+        </button>
+      </form>
+      <section class="ip-info-container">
+        <div>
+          <p>IP ADDRESS</p>
+          <p>192.212.174.101</p>
+        </div>
+        <div>
+          <p>LOCATION</p>
+          <p>Brooklyn, NY 10001</p>
+        </div>
+        <div>
+          <p>TIMEZONE</p>
+          <p>UTC -05:00</p>
+        </div>
+        <div>
+          <p>ISP</p>
+          <p>SpaceX Starlink</p>
+        </div>
+      </section>
+    </div>
+    <section class="map-container"></section>
+  </body>
 </html>
