added ip-search, about to start updating dom with data

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="heading-text">IP Address Tracker</p>
       <form action="">
         <input type="search" name="search" id="search-bar" />
-        <button type="button">
+        <button type="button" class="search-btn">
           <img src="./images/icon-arrow.svg" alt="" />
         </button>
       </form>
@@ -37,5 +37,6 @@
       </section>
     </div>
     <section class="map-container"></section>
+    <script src="./script.js"></script>
   </body>
 </html>
