finised the IP tracker api part, onto the live-map-generation

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <section class="ip-info-container">
         <div>
           <p>IP ADDRESS</p>
-          <p>192.212.174.101</p>
+          <p class="ip">192.212.174.101</p>
         </div>
         <div>
           <p>LOCATION</p>
-          <p>Brooklyn, NY 10001</p>
+          <p class="location">Brooklyn, NY 10001</p>
         </div>
         <div>
           <p>TIMEZONE</p>
-          <p>UTC -05:00</p>
+          <p>UTC <span class="timezone"></span></p>
         </div>
         <div>
           <p>ISP</p>
-          <p>SpaceX Starlink</p>
+          <p class="isp">SpaceX Starlink</p>
         </div>
       </section>
     </div>
