adding fetch-user-ip-details on load functionality

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <section class="ip-info-container">
         <div>
           <p>IP ADDRESS</p>
-          <p class="ip">192.212.174.101</p>
+          <p class="ip-address"></p>
         </div>
         <div>
           <p>LOCATION</p>
-          <p class="location">Brooklyn, NY 10001</p>
+          <p class="location"></p>
         </div>
         <div>
           <p>TIMEZONE</p>
@@ -32,7 +32,7 @@
         </div>
         <div>
           <p>ISP</p>
-          <p class="isp">SpaceX Starlink</p>
+          <p class="isp"></p>
         </div>
       </section>
     </div>
