will now be working on map functionality

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <section class="ip-info-container">
         <div>
           <p>IP ADDRESS</p>
-          <p class="ip-address"></p>
+          <p class="ip-address">Loading...</p>
         </div>
         <div>
           <p>LOCATION</p>
-          <p class="location"></p>
+          <p class="location">Loading...</p>
         </div>
         <div>
           <p>TIMEZONE</p>
-          <p>UTC <span class="timezone"></span></p>
+          <p>UTC <span class="timezone">Loading...</span></p>
         </div>
         <div>
           <p>ISP</p>
-          <p class="isp"></p>
+          <p class="isp">Loading...</p>
         </div>
       </section>
     </div>
