--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <title>Frontend Mentor | IP Address Tracker</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- Load external script after loading important bits -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+      integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+      crossorigin=""
+    />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script
+      src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+      integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+      crossorigin=""
+    ></script>
   </head>
   <body>
     <div class="main-container">
@@ -36,7 +49,9 @@
         </div>
       </section>
     </div>
-    <section class="map-container"></section>
+    <section class="map-container">
+      <div id="map" style="height: 180px"></div>
+    </section>
     <script src="./script.js"></script>
   </body>
 </html>
