fixed map style, removed complex map-height code

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
     </div>
     <section class="map-container">
-      <div id="map" style="height: 180px"></div>
+      <div id="map"></div>
     </section>
     <script src="./script.js"></script>
   </body>
