--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="main-container">
       <p class="heading-text">IP Address Tracker</p>
       <form action="">
-        <input type="search" name="search" id="search-bar" />
+        <input type="text" name="search" id="search-bar" placeholder="Search for any IP address or domain" />
         <button type="button" class="search-btn">
           <img src="./images/icon-arrow.svg" alt="" />
         </button>
