now working on error modal

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     ></script>
   </head>
   <body>
+    <div class="modal"></div>
     <div class="main-container">
       <p class="heading-text">IP Address Tracker</p>
       <form action="">
