--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
     </div>
     <section class="map-container">
-      <div id="map" style="height: 100vh"></div>
+      <div id="map" style="height: calc(100vh - 22rem)"></div>
     </section>
     <script src="./script.js"></script>
   </body>
