edited footer message, now working on error modal

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <section class="map-container">
       <div id="map" style="height: calc(100vh - 22rem)"></div>
     </section>
+    <!-- -coded by presh-031 (adding footer will messup map's controls) -->
     <script src="./script.js"></script>
   </body>
 </html>
