updated ui for modal

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       <section class="ip-info-container">
         <div>
           <p>IP ADDRESS</p>
-          <p class="ip-address">Loading...</p>
+          <p class="ip-address">-</p>
         </div>
         <div>
           <p>LOCATION</p>
-          <p class="location">Loading...</p>
+          <p class="location">-</p>
         </div>
         <div>
           <p>TIMEZONE</p>
-          <p>UTC <span class="timezone">Loading...</span></p>
+          <p class="timezone">-</p>
         </div>
         <div>
           <p>ISP</p>
-          <p class="isp">Loading...</p>
+          <p class="isp">-</p>
         </div>
       </section>
     </div>
