added footer and attribution

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
       crossorigin=""
     ></script>
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/8a6d734775.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="main-container">
@@ -59,7 +61,14 @@
         <button class="close-modal">Close</button>
       </div>
     </div>
-    <!-- -coded by presh-031 (adding footer will messup map's controls) -->
+    <!-- Footer -->
+    <footer>
+      <p>
+        -coded by
+        <a href="https://twitter.com/Presh_031" target="_blank">presh-031</a>
+        <a target="_blank" href="https://github.com/presh-031"><i class="fa-brands fa-github"></i></a>
+      </p>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
