--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>IP Address Tracker | Frontend Mentor</title>
     <link rel="shortcut icon" href="./images/icon-location.svg" />
     <link rel="stylesheet" href="/css/style.css" />
-    <!-- Load external script after loading important bits -->
+    <!-- Leaflet's CSS -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
       integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
       crossorigin=""
     />
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <!-- leaflet's script -->
     <script
       src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
