--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://kit.fontawesome.com/8a6d734775.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="main-container">
+    <main class="main-container">
       <p class="heading-text">IP Address Tracker</p>
       <form action="">
         <input type="text" name="search" id="search-bar" placeholder="Search for any IP address or domain" />
@@ -50,7 +50,7 @@
           <p class="isp">-</p>
         </div>
       </section>
-    </div>
+    </main>
     <section class="map-container">
       <div id="map" style="height: calc(100vh - 22rem)"></div>
     </section>
